tests/paczka1/small_fuzzy/77136760.err
Error in line 14: Y2a5yPpZitF S530 121,8
